<resources>
    <string name="app_name">Traza de evacuación</string>

    <string name="permission_rationale">Por favor active el permiso de localización</string>
    <string name="permission_denied_explanation">Por favor active el permiso de localización.</string>
    <string name="localizaciones_pendientes">Conéctese a Internet para que sus localizaciones sin conexión puedan ser enviadas al servidor.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>

    <string name="batched_location_updates">Batched location updates</string>
    <string name="mainText">Gracias por cooperar anónimamente con su geolozalización.</string>
    <string name="mainText2">Puede seguir utlizando su teléfono con normalidad.</string>
    <string name="textMain3">Si desea terminar la aplicación, debe presionar sobre el botón Terminar APP.</string>
    <string name="textMain4">Si no cuenta con Internet, su geolozalización será enviadá en cuanto el teléfono cuente con conexión a Internet.</string>
    <string name="logo_citiaps">Citiaps</string>
    <string name="button_terminar">TERMINAR APP</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
</resources>
